# Empirical-Influence-Function

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-annotate.txt  requirements.txt  vlm.py
configs/annotate/: default.yaml
configs/baseline/: clear.yaml  llm_code_cleaning.yaml  token_cleaning.yaml  xtf.yaml
configs/data_process/: default.yaml
configs/train/: default.yaml
docs/: FIM_spurious_correlation_experiment_design.md  annotate.md  attribution.md  baseline.md  curation.md  data_model.md  data_process.md  deploy.md  experiments.md  huawei_annotation_runbook.md  overview.md
outputs/benchmark/: README.md
outputs/docs/: attribution.md  benchmark.md  curation.md  data_process.md  deploy.md  visualization.md  华为部署.md  数据处理.md
requirements/: base.txt  dev.txt  train.txt
requirements/locks/: train.freeze.txt
scripts/baseline/: build_clear_data.py  build_llm_code_cleaning_data.py  build_token_cleaning_data.py  build_xtf_data.py  score_token_cleaning_data.py  score_xtf_data.py  train_ibft.sh
scripts/benchmark/: annotate_humaneval_train.py  annotate_safim_train.py  apply_governance_operator.py  benchmark_eval.py  benchmark_official_common.py  build_chatml_fim_unified.py  clear_operator.py  eval_generation.py  eval_judges.py  eval_reporting.py  evaluate_go_external_fim.py  evaluate_humaneval_infilling.py  evaluate_safim.py  generate_official_fim_predictions.py  ibft_loss.py  (+13 more)
src/: __init__.py  common.py
tests/: test_baseline_methods.py  test_data_process_pipeline.py  test_huawei_batch_annotation_sh.sh  test_safim_target_evidence.py
(+213 files in other folders)
